# lab-graphics

./: .gitignore  Cargo.toml  README.md
benches/: advanced.rs  primitives.rs  rasterize.rs
src/: color.rs  lib.rs  main.rs  object.rs  rasterizer.rs  shader.rs  texture.rs  transform.rs  triangle.rs
src/shaders/: blinn_phong.rs  bump.rs  displacement.rs  empty.rs  mod.rs  normal.rs  texture.rs
