[package]
name = "lab-graphics"
version = "0.1.0"
authors = [ "cxz888 <idlercloud@gmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.21"
minifb = "0.23"
rgb = "0.8"
anyhow = "1"
tobj = "3.2"
itertools = "0.10"
# thiserror = "1"

# anyhow = "1"
# bytes = "1.1.0"
# chrono = "0.4.19"
# crossbeam-channel = "0.5.4"
# clap = "3.2.14"
# fastrand = "1"
# rand = "0.8.5"
# rayon = "1.5"

# indexmap = "1.9.1"
# indexmap = { version = "1.9.1", features = ["serde", "rayon"] }
# dashmap = "5.3.4"

# itertools = "0.10.3"
# num_cpus = "1.13.1"
# regex = "1.6.0"

# serde = { version = "1.0.137", features = ["derive"] }
# serde_json = "1.0.81"
# serde_yaml = "0.8"

# tokio = { version = "1.18.2", features = ["full"] }
# async-trait = "0.1.53"
# futures = "0.3"

# reqwest = { version = "0.11.11", features = ["blocking"] }

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3"

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "advanced"
harness = false

[[bench]]
name = "rasterize"
harness = false

[profile.release]
debug = true
# lto = "fat"
# codegen-units = 1
